[gd_scene load_steps=17 format=3 uid="uid://btxvmewj7rfrv"]

[ext_resource type="PackedScene" uid="uid://cr1vey7wjonmn" path="res://road.tscn" id="1_60m4w"]
[ext_resource type="Script" path="res://main.gd" id="1_cx1n1"]
[ext_resource type="PackedScene" uid="uid://ylw2whhn84dl" path="res://default_car.tscn" id="2_8rxt7"]
[ext_resource type="PackedScene" uid="uid://dq4q782ewbonc" path="res://traffic_manager.tscn" id="2_ndcwk"]
[ext_resource type="PackedScene" uid="uid://cfdpjqvw04yjs" path="res://fast_car.tscn" id="3_cc26c"]
[ext_resource type="PackedScene" uid="uid://cgpiysx4edrls" path="res://truck.tscn" id="4_adlu1"]
[ext_resource type="PackedScene" uid="uid://6ddg7sjn5ms1" path="res://Persons/default_person.tscn" id="5_ilmiw"]
[ext_resource type="PackedScene" uid="uid://dw1bikcjmdhbh" path="res://Persons/man.tscn" id="6_soemf"]
[ext_resource type="PackedScene" uid="uid://bnc2sb3wyt26k" path="res://Persons/girl_1.tscn" id="7_alho5"]
[ext_resource type="PackedScene" uid="uid://dbjn2dd6y3qnf" path="res://Persons/girl_2.tscn" id="8_hbrbc"]
[ext_resource type="PackedScene" uid="uid://b8yntuow1515c" path="res://Persons/office_person.tscn" id="9_bj4vi"]
[ext_resource type="PackedScene" uid="uid://vl26bu8g3s3a" path="res://Persons/child.tscn" id="10_yulqq"]
[ext_resource type="PackedScene" uid="uid://c1761aa4wdn7t" path="res://Persons/dead_man.tscn" id="11_xksqs"]
[ext_resource type="PackedScene" uid="uid://degxq6aansuev" path="res://ambulance.tscn" id="12_45d62"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_p4elh"]
vertices = PackedVector2Array(-264, 1061, 1039, 1052, 956, 1053, 1101, 1309, 1100, 2140, 1051, 2113, 1054, 1182, 1083, 1239, 1081, 1177, 1108, 1063, 2116, 1059, 2125, 1178, 1194, 1174, 1164, 1156, 1114, 1148, 587.277, 754.882, -251, 755, -247, 698, -237, 680, 1037.24, 586.613, 1043, -55, 1104, -58, 1097, 468, 1085, 519, 1084, 575, 1088, 616, 1043, 647, 2066, 786, 2071, 898, 1104, 893, 1159, 788, 980, 560, 975, -54, 1032, -56, 1026, 645, 990, 632, 2084, 908, 2088, 1019, 1103, 1012, 1134.34, 913.808, 1052, 942, 1113, 908, 943, 894, -254, 894, -251, 791, 998, 782, 878, 1164, -265, 1176, 920, 1157, 961, 1165, -259, 1032, -260, 906, 948, 909, 900, 1025, 1039, 1182, 1033, 2117, 976, 2117, 985, 1239, 996, 1209, 992, 1183, 1184, 633, 2078, 630, 2080, 743, 1101, 753, 1149, 649, 1108, 645, 999, 781, 931, 748, -232, 629, 906, 642, 951, 645, 963, 911, 961, 781)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5, 6, 7), PackedInt32Array(8, 7, 6), PackedInt32Array(9, 10, 11, 12, 13), PackedInt32Array(9, 13, 14, 2), PackedInt32Array(15, 16, 17, 18), PackedInt32Array(19, 20, 21, 22, 23), PackedInt32Array(19, 23, 24), PackedInt32Array(19, 24, 25, 26), PackedInt32Array(27, 28, 29, 30), PackedInt32Array(31, 32, 33, 34, 35), PackedInt32Array(36, 37, 38, 39), PackedInt32Array(40, 41, 39, 38, 2), PackedInt32Array(42, 43, 44, 45), PackedInt32Array(46, 47, 0, 2, 48), PackedInt32Array(49, 48, 2), PackedInt32Array(50, 51, 52, 53), PackedInt32Array(54, 55, 56, 57, 58), PackedInt32Array(54, 58, 59), PackedInt32Array(60, 61, 62, 63, 64), PackedInt32Array(26, 65, 64, 63, 66), PackedInt32Array(67, 15, 18, 68, 69, 70), PackedInt32Array(26, 25, 65), PackedInt32Array(45, 66, 63, 30, 29, 40, 71, 42), PackedInt32Array(2, 53, 52, 40), PackedInt32Array(72, 67, 70, 35, 34, 66), PackedInt32Array(66, 34, 26), PackedInt32Array(40, 29, 41), PackedInt32Array(59, 49, 2, 54), PackedInt32Array(8, 6, 54, 2, 14), PackedInt32Array(2, 38, 9)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-232, 629, 906, 642, 951, 645, 990, 632, 980, 560, 975, -54, 1032, -56, 1026, 645, 1043, 647, 1037.24, 586.613, 1043, -55, 1104, -58, 1097, 468, 1085, 519, 1084, 575, 1088, 616, 1108, 645, 1149, 649, 1184, 633, 2078, 630, 2080, 743, 1101, 753, 1159, 788, 2066, 786, 2071, 898, 1104, 893, 1113, 908, 1134.34, 913.808, 2084, 908, 2088, 1019, 1103, 1012, 1108, 1063, 2116, 1059, 2125, 1178, 1194, 1174, 1164, 1156, 1114, 1148, 1081, 1177, 1083, 1239, 1101, 1309, 1100, 2140, 1051, 2113, 1054, 1182, 1039, 1182, 1033, 2117, 976, 2117, 985, 1239, 996, 1209, 992, 1183, 961, 1165, 920, 1157, 878, 1164, -265, 1176, -264, 1061, 1039, 1052, 956, 1053, 900, 1025, -259, 1032, -260, 906, 948, 909, 1052, 942, 963, 911, 943, 894, -254, 894, -251, 791, 998, 782, 999, 781, 961, 781, 931, 748, 587.277, 754.882, -251, 755, -247, 698, -237, 680)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="NavigationPolygon" id="NavigationPolygon_yea8u"]
vertices = PackedVector2Array(979, 1188, -353, 1184, -329, 1059, 630, 1057, 1438, 1059, 2597, 1061, 2580, 1183, 1106, 1181, 2578, 620, 2585, 753, 1442, 749, 1103, 619, -333, 1021, -345, 783, 628, 783, 630, 1021, 979, -375, 1125, -375, 1108, -6, 977, 0, 972, 625, 628, 752, -342, 748, -349, 634, 7, 623, 1111, 2067, 979, 2067, 1443, 787, 2591, 787, 2591, 1023, 1438, 1023)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(12, 13, 14, 15), PackedInt32Array(16, 17, 18, 19), PackedInt32Array(19, 18, 11, 20), PackedInt32Array(21, 22, 23, 24, 20), PackedInt32Array(7, 25, 26, 0), PackedInt32Array(27, 28, 29, 30), PackedInt32Array(15, 20, 11, 30, 4, 7, 0, 3), PackedInt32Array(14, 21, 20, 15), PackedInt32Array(11, 10, 27, 30)])
outlines = Array[PackedVector2Array]([PackedVector2Array(7, 623, 972, 625, 977, 0, 979, -375, 1125, -375, 1108, -6, 1103, 619, 2578, 620, 2585, 753, 1442, 749, 1443, 787, 2591, 787, 2591, 1023, 1438, 1023, 1438, 1059, 2597, 1061, 2580, 1183, 1106, 1181, 1111, 2067, 979, 2067, 979, 1188, -353, 1184, -329, 1059, 630, 1057, 630, 1021, -333, 1021, -345, 783, 628, 783, 628, 752, -342, 748, -349, 634)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Main" type="Node2D"]
script = ExtResource("1_cx1n1")
car_scenes = Array[PackedScene]([ExtResource("2_8rxt7"), ExtResource("3_cc26c"), ExtResource("4_adlu1")])
person_scene = Array[PackedScene]([ExtResource("5_ilmiw"), ExtResource("6_soemf"), ExtResource("7_alho5"), ExtResource("8_hbrbc"), ExtResource("9_bj4vi"), ExtResource("10_yulqq")])
dead_man_scene = ExtResource("11_xksqs")
ambu_scence = ExtResource("12_45d62")

[node name="Road" parent="." instance=ExtResource("1_60m4w")]

[node name="TrafficManager" parent="." instance=ExtResource("2_ndcwk")]

[node name="TrafficLight" parent="TrafficManager" index="0"]
position = Vector2(426, 500)
rotation = 1.5708

[node name="TrafficLight2" parent="TrafficManager" index="1"]
position = Vector2(1219, 117)
rotation = 3.14159

[node name="TrafficLight3" parent="TrafficManager" index="2"]
position = Vector2(1834, 1300)
rotation = -1.5708

[node name="TrafficLight4" parent="TrafficManager" index="3"]
position = Vector2(860, 1703)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(2, 0)
navigation_polygon = SubResource("NavigationPolygon_p4elh")

[node name="AmbulanceNavigationRegion" type="NavigationRegion2D" parent="."]
visible = false
navigation_polygon = SubResource("NavigationPolygon_yea8u")
navigation_layers = 2

[node name="LeftLaneMarker" type="Node2D" parent="."]
position = Vector2(-200, 0)
metadata/_edit_group_ = true

[node name="LP1" type="Marker2D" parent="LeftLaneMarker" groups=["left_spawn_pos", "no_light_lane", "positions"]]
position = Vector2(-3, 655)

[node name="LP2" type="Marker2D" parent="LeftLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(-2, 723)

[node name="LP3" type="Marker2D" parent="LeftLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(-2, 815)

[node name="LP4" type="Marker2D" parent="LeftLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(-5, 878)

[node name="LP5" type="Marker2D" parent="LeftLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(-8, 932)

[node name="LP6" type="Marker2D" parent="LeftLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(-7, 994)

[node name="LP7" type="Marker2D" parent="LeftLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(-10, 1089)

[node name="LP8" type="Marker2D" parent="LeftLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(-11, 1148)

[node name="RightLaneMarker" type="Node2D" parent="."]
position = Vector2(2050, -5)
metadata/_edit_group_ = true

[node name="RP1" type="Marker2D" parent="RightLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(-6, 654)

[node name="RP2" type="Marker2D" parent="RightLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(-5, 730)

[node name="RP3" type="Marker2D" parent="RightLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(-2, 816)

[node name="RP4" type="Marker2D" parent="RightLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(-3, 873)

[node name="RP5" type="Marker2D" parent="RightLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(-1, 931)

[node name="RP6" type="Marker2D" parent="RightLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(1, 991)

[node name="RP7" type="Marker2D" parent="RightLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(0, 1090)

[node name="RP8" type="Marker2D" parent="RightLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(4, 1145)

[node name="TopLaneMarker" type="Node2D" parent="."]
position = Vector2(1008, -1000)

[node name="TP1" type="Marker2D" parent="TopLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(1, 877)

[node name="TP2" type="Marker2D" parent="TopLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(66, 876)

[node name="BottomLaneMarker" type="Node2D" parent="."]
position = Vector2(1013, 1200)
metadata/_edit_group_ = true

[node name="BP1" type="Marker2D" parent="BottomLaneMarker" groups=["left_spawn_pos", "positions"]]
position = Vector2(1, 877)

[node name="BP2" type="Marker2D" parent="BottomLaneMarker" groups=["available_destinations", "positions"]]
position = Vector2(66, 876)

[node name="ZebraCrossMarker" type="Node2D" parent="."]
visible = false

[node name="TL" type="Marker2D" parent="ZebraCrossMarker"]
position = Vector2(929, 561)

[node name="BL" type="Marker2D" parent="ZebraCrossMarker"]
position = Vector2(936, 1210)
gizmo_extents = 553.7

[node name="BR" type="Marker2D" parent="ZebraCrossMarker"]
position = Vector2(1142, 1209)
gizmo_extents = 553.7

[node name="TR" type="Marker2D" parent="ZebraCrossMarker"]
position = Vector2(1146, 560)
gizmo_extents = 553.7

[node name="PersonContainer" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
visible = false
position = Vector2(27, 1228)
gizmo_extents = 1000.0

[node name="PersonSpawnMarker" type="Node2D" parent="."]

[node name="TL" type="Marker2D" parent="PersonSpawnMarker" groups=["person_spawn_area"]]
position = Vector2(681, -140)
gizmo_extents = 1000.0

[node name="BR" type="Marker2D" parent="PersonSpawnMarker" groups=["person_spawn_area"]]
position = Vector2(1244, 1900)
gizmo_extents = 1000.0

[node name="TR" type="Marker2D" parent="PersonSpawnMarker" groups=["person_spawn_area2"]]
position = Vector2(2110, 285)
gizmo_extents = 1000.0

[node name="BL" type="Marker2D" parent="PersonSpawnMarker" groups=["person_spawn_area2"]]
position = Vector2(-26, 1358)
gizmo_extents = 1000.0

[node name="CarSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="PersonSpawnTimer1" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PersonSpawnTimer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="FamilySpawnTimer" type="Timer" parent="."]
wait_time = 13.0
autostart = true

[connection signal="left_zebra_entered" from="Road" to="." method="_on_road_left_zebra_entered"]
[connection signal="person_entered_in_bottom_zebra_limit" from="Road" to="." method="_on_road_person_entered_in_bottom_zebra_limit"]
[connection signal="person_entered_in_left_zebra_limit" from="Road" to="." method="_on_road_person_entered_in_left_zebra_limit"]
[connection signal="person_entered_in_right_zebra_limit" from="Road" to="." method="_on_road_person_entered_in_right_zebra_limit"]
[connection signal="person_entered_in_top_zebra_limit" from="Road" to="." method="_on_road_person_entered_in_top_zebra_limit"]
[connection signal="person_waiting_zebra" from="Road" to="." method="_on_road_person_waiting_zebra"]
[connection signal="person_waiting_zebra_1" from="Road" to="." method="_on_road_person_waiting_zebra_1"]
[connection signal="traffic_light_changed" from="TrafficManager" to="." method="_on_traffic_manager_traffic_light_changed"]
[connection signal="timeout" from="CarSpawnTimer" to="." method="_on_car_spawn_timer_timeout"]
[connection signal="timeout" from="PersonSpawnTimer1" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PersonSpawnTimer2" to="." method="_on_person_spawn_timer_2_timeout"]
[connection signal="timeout" from="FamilySpawnTimer" to="." method="_on_family_spawn_timer_timeout"]

[editable path="TrafficManager"]
